--- a/how-to-play.html
+++ b/how-to-play.html
@@ -10,9 +10,11 @@
   <meta name="keywords"
     content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
+    <link href="https://https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -22,12 +24,12 @@
       <nav class="menu">
         <button class="menu__btn" type="button">
           <span></span>
-          <span class="sr-only">відкрити меню</span>
+          <!-- <span class="sr-only">відкрити меню</span> -->
         </button>
         <ul class="menu__items">
           <li class="menu__item">
-            <a class="menu__link" href="">
-              sushi
+            <a class="menu__link" href="index.html">
+              Sushi
             </a>
           </li>
           <li class="menu__item">
@@ -47,7 +49,7 @@
           </li>
           <li class="menu__item">
             <a class="menu__link" href="sushi-slot.html">
-              sushi slot
+              Sushi slot
             </a>
           </li>
         </ul>
@@ -61,7 +63,7 @@
         <h2 class="title">
           Sushi e Cassino no Brasil: Uma Fusão de Culturas e Sabores
         </h2>
-        <img class="img" src="images/garota.png"
+        <img class="img" src="images/dist/garota.png"
           alt="1 garota, braçadeira, ombros nus, céu azul, corar, seios, decote, dia, brincos, peixe, comida, sardas, olhos verdes, joias, seios grandes, lábios, cabelos longos, olhando para o espectador, colar, ao ar livre, cabelo rosa, camarão, céu, sorriso, sozinha, sushi, parte superior do corpo">
       </div>
     </section>
@@ -79,37 +81,55 @@
           <p>
             Contoh nomor bola angka yang dihasilkan Singapore toto:
           </p>
-          <p>Bola 1 = 7</p>
-          <p>Bola 2 = 21</p>
-          <p>Bola 3 = 29</p>
-          <p>Bola 4 = 32</p>
-          <p>Bola 5 = 36</p>
-          <p>Bola 6 = 38</p>
-          <p>Additional Number = 04</p>
-          <span>Nomor buka 0885</span>
+          <p>Bola 1: Angka 7</p>
+          <p>Bola 2: Angka 21</p>
+          <p>Bola 3: Angka 29</p>
+          <p>Bola 4: Angka 32</p>
+          <p>Bola 5: Angka 36</p>
+          <p>Bola 6: Angka 38</p>
+          <p>Nomor Tambahan: Angka 04</p>
+          <span>Nomor buka: 0885</span>
           <span>Cara perhitungan rumus:</span>
-          <p>Bola di urutkan dari yang terkecil sampai yang terbesar.</p>
-          <p>Bola ke 1 sampai bola ke 6 dijumlahkan 7+21+29+32+36+38 = 163 di kali 2 = 326</p>
-          <p>Hasil dari 326 dikurangkan bola ke 1 ( 7 ) dan bola ke 6 ( 38 ) = 281</p>
-          <p>Sisa 281 ditambah additional number (04) = 285</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <p>Bola-bola disusun dari yang terkecil hingga yang terbesar.</p>
+          <p>Penjumlahan bola ke-1 hingga bola ke-6, yaitu 7+21+29+32+36+38, sama dengan 163. Hasil ini kemudian dikalikan dengan 2,
+          menghasilkan 326.</p>
+          <p>Dari 326, kemudian dikurangkan dengan angka pada bola ke-1 (7) dan bola ke-6 (38), sehingga menjadi 281.</p>
+          <p>Sisa 281 ditambahkan dengan nomor tambahan (04), sehingga totalnya menjadi 285.</p>
           <p>
-            Dari hasil 285, didapatkan 2 angka puluhan 85 tersebut. Setelah itu dicari angka ratusan dan ribuan nya.
+            Dari 285, kita mendapatkan angka puluhan 85. Kemudian kita mencari angka ratusan dan ribuan.
           </p>
           <p>
-            Untuk mendapat angka ratusan kita mengambil dari bola ke 4 ( 32 ) ditambah bola ke 5 ( 36 ) jumlah = 68
-            kita
-            ambil ekor
+            
+          Untuk angka ratusan, kita ambil dari penjumlahan bola ke-4 (32) dan bola ke-5 (36), yang hasilnya 68. Angka belakangnya,
+          yaitu 8, diambil sebagai angka untuk ratusan.
           </p>
           <p>8 ini sebagai angka untuk ratusan</p>
-          <p>Untuk mendapat angka ribuan kita mengambil dari bola ke 2 ( 21 ) ditambah bola ke 3 ( 29 ) jumlah = 50 kita
-            ambil ekor</p>
+          <p>Sedangkan untuk angka ribuan, kita ambil dari penjumlahan bola ke-2 (21) dan bola ke-3 (29), yang hasilnya 50. Angka
+          belakangnya, yaitu 0, diambil sebagai angka untuk ribuan.</p>
           <p>0</p>
           <p>ini sebagai angka untuk ribuan</p>
-          <p>Maka hasil perhitungan diatas:</p>
+          <p>Maka hasil perhitungannya adalah:</p>
           <p>Ribuan = 0</p>
           <p>Ratusan = 8</p>
           <p>Puluhan = 85</p>
-          <span>Hasilnya = buka 0885</span>
+          <span>Sehingga hasilnya adalah buka 0885.</span>
           <div class="text">
             Sushi e cassino no Brasil combinam gastronomia refinada com entretenimento emocionante, criando uma
             experiência única
@@ -167,10 +187,10 @@
 
   <footer class="footer">
     <div class="container">
-      <img class="img" src="images/hashis.png" alt="6+ meninos, 6+ meninas, barba, cabelo preto, camisa preta, calça jeans azul, cadeira, hashis, olhos fechados, copo, jeans, bolinho cozido, comendo, pelos faciais, comida, coque de cabelo, chapéu, segurando, dentro, jaqueta, calça jeans, joias, cabelo comprido, mangas compridas, makizushi, vários meninos, várias meninas, bigode, boca aberta, camisa laranja, calças, prato, restaurante, camisa, sapatos, cabelo curto, sentado, sorriso, óculos de sol, sushi, suéter, mesa, relógio, camisa branca, relógio de pulso, camisa amarela">
+      <picture><source srcset="images/hashis.avif" type="image/avif"><source srcset="images/dist/hashis.webp" type="image/webp"><picture><source srcset="images/dist/hashis.avif" type="image/avif"><source srcset="images/dist/hashis.webp" type="image/webp"><img class="img" src="images/dist/hashis.png" alt="6+ meninos, 6+ meninas, barba, cabelo preto, camisa preta, calça jeans azul, cadeira, hashis, olhos fechados, copo, jeans, bolinho cozido, comendo, pelos faciais, comida, coque de cabelo, chapéu, segurando, dentro, jaqueta, calça jeans, joias, cabelo comprido, mangas compridas, makizushi, vários meninos, várias meninas, bigode, boca aberta, camisa laranja, calças, prato, restaurante, camisa, sapatos, cabelo curto, sentado, sorriso, óculos de sol, sushi, suéter, mesa, relógio, camisa branca, relógio de pulso, camisa amarela"></picture></picture>
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">sushi-id.com</a>
+        <a href="#">sushi-bet-brasil.000webhostapp.com</a>
       </div>
     </div>
   </footer>
