--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <meta name="keywords"
     content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <!-- htnl -->
   <!-- css -->
   <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
-  <link href="https://sushi-id.com" rel="canonical">
+  <link href="https://https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -24,12 +25,12 @@
       <nav class="menu">
         <button class="menu__btn" type="button">
           <span></span>
-          <span class="sr-only">відкрити меню</span>
+          <!-- <span class="sr-only">відкрити меню</span> -->
         </button>
         <ul class="menu__items">
           <li class="menu__item">
-            <a class="menu__link" href="">
-              sushi
+            <a class="menu__link" href="index.html">
+              Sushi
             </a>
           </li>
           <li class="menu__item">
@@ -49,7 +50,7 @@
           </li>
           <li class="menu__item">
             <a class="menu__link" href="sushi-slot.html">
-              sushi slot
+              Sushi slot
             </a>
           </li>
         </ul>
@@ -65,7 +66,7 @@
         <h2 class="sr-only">
           Saboreie sushi em cassinos brasileiros, uma fusão emocionante de sabores e entretenimento.
         </h2>
-        <img class="img" src="images/peixe.png"
+        <img class="img" src="images/dist/peixe.png"
           alt="palitos de hashi, texto em inglês, peixe, comida, foco na comida, makizushi, carne, sem seres humanos, arroz, camarão, natureza morta, sushi, tamagoyaki, vegetal">
       </div>
     </section>
@@ -92,7 +93,7 @@
           momentos
           memoráveis para os visitantes.
         </div>
-        <img class="img" src="images/comida.png"
+        <img class="img" src="images/dist/comida.png"
           alt="texto em inglês, peixe, comida, foco na comida, makizushi, sem seres humanos, omelete, onigiri, arroz, camarão, natureza morta, sushi, tamagoyaki">
         <div class="text">
           <!-- 4 строчки -->
@@ -112,7 +113,7 @@
         <h2 class="__title title">
           Sushi e Cassinos: Uma Fusão de Sabores e Entretenimento no Brasil
         </h2>
-        <img class="img" src="images/barba.png"
+        <img class="img" src="images/dist/barba.png"
           alt="
 1 menina, 2 meninos, barba, cabelo preto, tigela, olhos fechados, pelos faciais, comida, chapéu, múltiplos meninos, bigode, sorriso, sushi">
         <div class="text">
@@ -173,7 +174,7 @@
         <h2 class="__title title">
           O Impacto dos Apps na Sociedade Brasileira
         </h2>
-        <img class="img" src="images/ehoumaki.png"
+        <img class="img" src="images/dist/ehoumaki.png"
           alt="
 ehoumaki, comida, foco na comida, makizushi, sem seres humanos, onigiri, prato, arroz, camarão, natureza morta, sushi, tamagoyaki, bandeja">
         <div class="text">
@@ -185,7 +186,7 @@ ehoumaki, comida, foco na comida, makizushi, sem seres humanos, onigiri, prato, 
           aplicativos se tornaram uma ferramenta essencial para a conveniência e eficiência dos usuários no Brasil.
         </div>
         <a class="link" href="">
-          sushi MOBILE APK
+          Sushi MOBILE APK
         </a>
       </div>
     </section>
@@ -199,8 +200,8 @@ ehoumaki, comida, foco na comida, makizushi, sem seres humanos, onigiri, prato, 
           <!-- 4строчки -->
           Desfrute do sushi em cassinos brasileiros, uma fusão irresistível de sabores e entretenimento emocionante.
         </div>
-        <a class="link" href="">sushi LINK ALTERNATIF</a>
-        <img class="img" src="images/prato.png"
+        <a class="link" href="">Sushi LINK ALTERNATIF</a>
+        <img class="img" src="images/dist/prato.png"
           alt="
 tigela, cadeira, profundidade de campo, comida, foco na comida, dentro de casa, sem seres humanos, prato, restaurante, cenário, natureza morta, mesa">
       </div>
@@ -210,10 +211,10 @@ tigela, cadeira, profundidade de campo, comida, foco na comida, dentro de casa, 
 
   <footer class="footer">
     <div class="container">
-      <img class="img" src="images/paródia.png" alt="logotipo, paródia de logotipo, sem seres humanos">
+      <picture><source srcset="images/dist/paródia.avif" type="image/avif"><source srcset="images/paródia.webp" type="image/webp"><picture><source srcset="images/dist/paródia.avif" type="image/avif"><source srcset="images/dist/paródia.webp" type="image/webp"><img class="img" src="images/dist/paródia.png" alt="logotipo, paródia de logotipo, sem seres humanos"></picture></picture>
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">sushi-id.com</a>
+        <a href="#">sushi-bet-brasil.000webhostapp.com</a>
       </div>
     </div>
   </footer>
