--- a/sushi-login.html
+++ b/sushi-login.html
@@ -10,47 +10,50 @@
   <meta name="keywords"
     content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
+  <link href="https://https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
+
 <body class="body">
   <header class="header">
     <div class="container">
-        <nav class="menu">
-          <button class="menu__btn" type="button">
-            <span></span>
-            <span class="sr-only">відкрити меню</span>
-          </button>
-          <ul class="menu__items">
-            <li class="menu__item">
-              <a class="menu__link" href="">
-                sushi
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="how-to-play.html">
-                Cara Bermain
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="promosi.html">
-                Promosi
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="sushi-login.html">
-                Login
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="sushi-slot.html">
-                sushi slot
-              </a>
-            </li>
-          </ul>
-        </nav>
+      <nav class="menu">
+        <button class="menu__btn" type="button">
+          <span></span>
+          <!-- <span class="sr-only">відкрити меню</span> -->
+        </button>
+        <ul class="menu__items">
+          <li class="menu__item">
+            <a class="menu__link" href="index.html">
+              Sushi
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="how-to-play.html">
+              Cara Bermain
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="promosi.html">
+              Promosi
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="sushi-login.html">
+              Login
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="sushi-slot.html">
+              Sushi slot
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -60,11 +63,16 @@
         <h2 class="title">
           Sushi Login: Sabor e Conexão
         </h2>
-        <img class="img" src="images/7.png" alt="">
+        <picture>
+          <source srcset="images/dist/terno.avif" type="image/avif">
+          <source srcset="images/terno.webp" type="image/webp"><img class="img" src="images/dist/terno.png"
+            alt="1 menino, barba, cabelo preto, camisa com colarinho, pelos faciais, comida, formal, interior, jaqueta, mahjong, foco masculino, bigode, gravata, ficha de pôquer, jaqueta vermelha, gravata vermelha, restaurante, camisa, cabelo curto, sozinho, terno, sushi, mesa, colete, camisa branca">
+        </picture>
         <div class="text">
           <!-- 3строчки -->
           Descubra uma abordagem inovadora para autenticação online com Sushi Login, uma fusão de praticidade e sabor.
-          Satisfazendo seu paladar enquanto garante segurança, é uma experiência única. Experimente a delícia de acessar suas
+          Satisfazendo seu paladar enquanto garante segurança, é uma experiência única. Experimente a delícia de acessar
+          suas
           contas com Sushi Login hoje mesmo!
         </div>
         <a class="link" href="">Abra o site.</a>
@@ -72,12 +80,16 @@
     </section>
   </main>
 
-    <footer class="footer">
+  <footer class="footer">
     <div class="container">
-      <img class="img" src="" alt="">
+      <picture>
+        <source srcset="images/árvore.avif" type="image/avif">
+        <source srcset="images/dist/árvore.webp" type="image/webp"><img class="img" src="images/dist/árvore.png"
+          alt="céu azul, nuvem, dia, peixe, comida, foco na comida, makizushi, sem humanos, oceano, onigiri, ao ar livre, palmeira, planta, prato, arroz, paisagem, alga marinha, camarão, céu, sushi, árvore">
+      </picture>
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">sushi-id.com</a>
+        <a href="#">sushi-bet-brasil.000webhostapp.com</a>
       </div>
     </div>
   </footer>
