--- a/sushi-slot.html
+++ b/sushi-slot.html
@@ -10,7 +10,6 @@
   <meta name="keywords"
     content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
-    <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
@@ -24,11 +23,11 @@
       <nav class="menu">
         <button class="menu__btn" type="button">
           <span></span>
-          <!-- <span class="sr-only">відкрити меню</span> -->
+          <span class="sr-only">відкрити меню</span>
         </button>
         <ul class="menu__items">
           <li class="menu__item">
-            <a class="menu__link" href="index.html">
+            <a class="menu__link" href="">
               Sushi
             </a>
           </li>
@@ -44,7 +43,7 @@
           </li>
           <li class="menu__item">
             <a class="menu__link" href="sushi-login.html">
-            Sushi Login
+              Login
             </a>
           </li>
           <li class="menu__item">
@@ -63,7 +62,7 @@
         <h2 class="title">
           Uma Aventura Gastronômica nas Bobinas
         </h2>
-        <picture><source srcset="images/dist/álcool.avif" type="image/avif"><source srcset="images/álcool.webp" type="image/webp"><picture><source srcset="images/dist/álcool.avif" type="image/avif"><source srcset="images/dist/álcool.webp" type="image/webp"><img class="img" src="images/dist/álcool.png" alt="6+ meninos, 6+ meninas, álcool, cabelo preto, hashis, copo, brincos, flor, comida, coque de cabelo, flor no cabelo, ornamento de cabelo, dentro, joias, cabelo comprido, vários meninos, várias meninas, restaurante, único coque de cabelo, sentado, sushi, mesa"></picture></picture>
+        <picture><source srcset="images/álcool.avif" type="image/avif"><source srcset="images/álcool.webp" type="image/webp"><picture><source srcset="images/álcool.avif" type="image/avif"><source srcset="images/álcool.webp" type="image/webp"><img class="img" src="images/álcool.png" alt="6+ meninos, 6+ meninas, álcool, cabelo preto, hashis, copo, brincos, flor, comida, coque de cabelo, flor no cabelo, ornamento de cabelo, dentro, joias, cabelo comprido, vários meninos, várias meninas, restaurante, único coque de cabelo, sentado, sushi, mesa"></picture></picture>
         <div class="text">
           <!-- 6строк -->
         Sushi Slot oferece uma experiência emocionante, combinando a emoção do jogo com a delícia da culinária japonesa. Com
@@ -107,7 +106,7 @@
 
   <footer class="footer">
     <div class="container">
-      <picture><source srcset="images/rice.avif" type="image/avif"><source srcset="images/dist/rice.webp" type="image/webp"><picture><source srcset="images/dist/rice.avif" type="image/avif"><source srcset="images/dist/rice.webp" type="image/webp"><img class="img" src="images/dist/rice.png" alt="1boy, beard, black eyes, black hair, chopsticks, english text, facial hair, fish, food, looking at viewer, makizushi, male focus, mustache, rice, shadow, shrimp, solo, sushi"></picture></picture>
+      <picture><source srcset="images/rice.avif" type="image/avif"><source srcset="images/rice.webp" type="image/webp"><picture><source srcset="images/rice.avif" type="image/avif"><source srcset="images/rice.webp" type="image/webp"><img class="img" src="images/rice.png" alt="1boy, beard, black eyes, black hair, chopsticks, english text, facial hair, fish, food, looking at viewer, makizushi, male focus, mustache, rice, shadow, shrimp, solo, sushi"></picture></picture>
       <div class="copy">
         <span>© Copyright 2024</span>
         <a href="#">sushi-bet-brasil.000webhostapp.com</a>
