--- a/promosi.html
+++ b/promosi.html
@@ -9,12 +9,13 @@
   <meta name="keywords"
     content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <!-- htnl -->
   <!-- css -->
   <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
-  <link href="https://sushi-id.com" rel="canonical">
+  <link href="https://https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -24,12 +25,12 @@
       <nav class="menu">
         <button class="menu__btn" type="button">
           <span></span>
-          <span class="sr-only">відкрити меню</span>
+          <!-- <span class="sr-only">відкрити меню</span> -->
         </button>
         <ul class="menu__items">
           <li class="menu__item">
-            <a class="menu__link" href="">
-              sushi
+            <a class="menu__link" href="index.html">
+              Sushi
             </a>
           </li>
           <li class="menu__item">
@@ -49,7 +50,7 @@
           </li>
           <li class="menu__item">
             <a class="menu__link" href="sushi-slot.html">
-              sushi slot
+              Sushi slot
             </a>
           </li>
         </ul>
@@ -61,12 +62,16 @@
     <section class="section">
       <div class="container">
         <h2 class="title">
-        Promoção Eficaz
+          Promoção Eficaz
         </h2>
         <div class="subtext">
           <span>Promoção: Essencial para o Sucesso</span>
         </div>
-        <img class="img" src="images/seios.png" alt="1 garota, cabelo preto, seios, vestido, comida, enfeite de cabelo, batom, olhando para o espectador, maquiagem, onigiri, lábios vermelhos, arroz, mangas curtas, sorriso, solo, sushi.">
+        <picture>
+          <source srcset="images/dist/seios.avif" type="image/avif">
+          <source srcset="images/seios.webp" type="image/webp"><img class="img" src="images/dist/seios.png"
+            alt="1 garota, cabelo preto, seios, vestido, comida, enfeite de cabelo, batom, olhando para o espectador, maquiagem, onigiri, lábios vermelhos, arroz, mangas curtas, sorriso, solo, sushi.">
+        </picture>
         <div class="text">
           <span class="subtext">Bônus de Rendimento de Caça-Níqueis</span>
           <p>Exemplo de Cálculo de Bônus:</p>
@@ -85,7 +90,8 @@
             2. Esta promoção só é válida para jogos de slot online.
           </li>
           <li class="li">
-            3. O período de cálculo do volume de negócios é de segunda-feira a domingo e é distribuído todas as terças-feiras às 04:00 da manhã, horário de Brasília.
+            3. O período de cálculo do volume de negócios é de segunda-feira a domingo e é distribuído todas as
+            terças-feiras às 04:00 da manhã, horário de Brasília.
           </li>
           <li class="li">4. O volume de negócios mínimo para receber o bônus semanal é de R$ 10.000.000.
           </li>
@@ -107,7 +113,8 @@
         </h2>
         <div class="text">
           <span class="subtext">BÔNUS DE NOVO MEMBRO DE 100%.</span>
-          Descubra o Sushi Casino Brazil, onde a emoção dos jogos de azar se encontra com a delícia da culinária japonesa,
+          Descubra o Sushi Casino Brazil, onde a emoção dos jogos de azar se encontra com a delícia da culinária
+          japonesa,
           proporcionando uma experiência inigualável para os visitantes.
         </div>
         <a class="link" href="">BONUS 100%</a>
@@ -117,10 +124,14 @@
 
   <footer class="footer">
     <div class="container">
-      <img class="img" src="images/folha.png" alt="peixe, comida, foco alimentar, folha, makizushi, sem humanos, onigiri, prato, arroz, camarão, natureza morta, sushi, tamagoyaki, vegetal">
+      <picture>
+        <source srcset="images/dist/folha.avif" type="image/avif">
+        <source srcset="images/folha.webp" type="image/webp"><img class="img" src="images/dist/folha.png"
+          alt="peixe, comida, foco alimentar, folha, makizushi, sem humanos, onigiri, prato, arroz, camarão, natureza morta, sushi, tamagoyaki, vegetal">
+      </picture>
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">sushi-id.com</a>
+        <a href="#">sushi-bet-brasil.000webhostapp.com</a>
       </div>
     </div>
   </footer>
